5.8_Secret.Переменные_окружения/01_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secret-tls

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-playground
  namespace: secret-tls
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: go-playground
  template:
    metadata:
      labels:
        app: go-playground
    spec:
      containers:
      - name: server
        image: x1unix/go-playground:1.13
        ports: 
        - containerPort: 8000
          name: web
