5.8_Secret.Переменные_окружения/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playground-svc
  namespace: secret-tls
spec:
  selector:
    app: go-playground
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8000
