5.8_Secret.Переменные_окружения/04_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-playground
  namespace: secret-tls
spec:
  ingressClassName: nginx
  rules:
  - host: sec.akj.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: playground-svc
            port:
              number: 8000
  tls:
    - hosts:
        - sec.akj.ru
      secretName: tls-secret
